--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,10 @@
 name: HoneyChest
 main: HoneyChest\HoneyChest
-version: 0.0.0
+version: 0.4.0
 api: [1.7.1]
 load: POSTWORLD
 author: rain318
-description: HoneyChest Plugin
+description: HoneyChest-Plugin
 website: https://github.com/rain318/HoneyChest
 commands:
  hc:
